--- a/src/app/message-section/message-section.component.html
+++ b/src/app/message-section/message-section.component.html
@@ -1,40 +1,37 @@
-<form [formGroup]="form" (ngSubmit)="send()">
-    <div class="form-group">
-      <label for="from_name">Name</label>
-      <input id="from_name" type="text" formControlName="from_name" placeholder="From Name">
-    </div>
-  
-    <div class="form-group">
-      <label for="from_email">Email</label>
-      <input id="from_email" type="email" formControlName="from_email" placeholder="From Email">
-    </div>
-  
-    <div class="form-group">
-      <label for="subject">Subject</label>
-      <input id="subject" type="text" formControlName="subject" placeholder="Subject">
-    </div>
-  
-    <div class="form-group">
-      <label for="message">Message</label>
-      <textarea id="message" formControlName="message" placeholder="Message"></textarea>
-    </div>
-
-    <!-- {{form.value | json}} -->
-  
-    <button type="submit">
-        <ng-container *ngIf="!isLoading">Submit</ng-container>
-        <ng-container *ngIf="isLoading">Loading...</ng-container>
-    </button>
-  </form>
-
+<div class="wrapper">
+  <div class="black-hole"></div>
+  <img [src]="myImage" alt="mbuelo">
+    <form [formGroup]="form" (ngSubmit)="send()">
+        <div class="form-group">
+          <label for="from_name">Name</label>
+          <input id="from_name" type="text" formControlName="from_name" placeholder="From Name">
+        </div>
+      
+        <div class="form-group">
+          <label for="from_email">Email</label>
+          <input id="from_email" type="email" formControlName="from_email" placeholder="From Email">
+        </div>
+      
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input id="subject" type="text" formControlName="subject" placeholder="Subject">
+        </div>
+      
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea id="message" formControlName="message" placeholder="Message"></textarea>
+        </div>
+    
+        <!-- {{form.value | json}} -->
+      
+        <button type="submit">
+            <ng-container *ngIf="!isLoading">Submit</ng-container>
+            <ng-container *ngIf="isLoading">Loading...</ng-container>
+        </button>
+    </form>
+    
+</div>
   <app-popup [title]="'My Popup Title'" [show]="showPopup" (closed)="closePopup()">
     <p>{{ popupMessage }}</p>
   </app-popup>
-
-  <!-- 
-    13mcOOGf_L5wOewqm   id
-service_5mrmudf
-template_xow0yxg
-   -->
-  
   
